--- a/app/index.html
+++ b/app/index.html
@@ -7,5 +7,10 @@
 <body>
 
 <div id="root"></div>
+
+<% if(htmlWebpackPlugin.options.mode === 'production') { %>
+<script src="https://unpkg.com/react@16.7.0/umd/react.production.min.js"></script>
+<script src="https://unpkg.com/react-dom@16.7.0/umd/react-dom.production.min.js"></script>
+<% } %>
 </body>
 </html>
