--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 
 <div id="root"></div>
 
-<% if(htmlWebpackPlugin.options.mode === 'production') { %>
+<% if(htmlWebpackPlugin.options.env === 'production') { %>
 <script src="https://unpkg.com/react@16.7.0/umd/react.production.min.js"></script>
 <script src="https://unpkg.com/react-dom@16.7.0/umd/react-dom.production.min.js"></script>
 <% } %>
