--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
 <script src="https://unpkg.com/react@16.7.0/umd/react.production.min.js"></script>
 <script src="https://unpkg.com/react-dom@16.7.0/umd/react-dom.production.min.js"></script>
 
-<script type="text/javascript" src="/main.f1a0413f.js"></script></body>
+<script type="text/javascript" src="main.37b61328.js"></script></body>
 </html>
